[package]
name = "rs_day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_day_a = { path = "../rs_day_a", version = "0.1.0" }
rs_day_b = { path = "../rs_day_b", version = "0.1.0" }
rs_day_c = { path = "../rs_day_c", version = "0.1.0" }
rs_day_d = { path = "../rs_day_d", version = "0.1.0" }
