[package]
name = "rs_day_l"
version = "0.1.0"
edition = "2021"
author = "itxve"
readme = "README.md"
about = "it is a demo"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.1.17", features = ["derive", "cargo"] }
